<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
        android:padding="2dp"
        android:background="@drawable/shape_round_corner"
        android:layout_height="wrap_content" android:orientation="vertical">

    <TextView
            android:text="@string/lunar_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="18sp"
            android:gravity="center"/>
    <TextView
            android:text="@string/lunar_leap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textSize="18sp"
            android:gravity="center"/>

    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="@string/no_leap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button_only"
                android:layout_weight="1"
                android:gravity="center"
                tools:ignore="ButtonStyle"/>
        <Button
                android:text="@string/leap_and_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_leap_normal"
                android:layout_weight="1"
                tools:ignore="ButtonStyle"/>
    </TableRow>
</TableLayout>