<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.birth.BirthActivity" android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:title="@string/app_name"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <GridLayout
            android:elevation="10dp"
            android:columnCount="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp">
        <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="18sp"
                android:textColor="#000000" android:layout_gravity="center" android:layout_marginEnd="4dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameTextView"
                android:textSize="22sp" android:textColor="#000000"/>

        <TextView
                android:text="@string/birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="18sp"
                android:textColor="#000000" android:layout_gravity="center" android:layout_marginEnd="4dp"/>
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content">
            <TextView
                    android:text="公历"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lunarTextView" android:layout_weight="1"
                    android:textSize="16sp" android:textColor="#000000" android:textStyle="bold"
                    tools:ignore="HardcodedText"/>
            <TextView
                    android:text="100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/yearTextView" android:layout_weight="1"
                    android:textSize="20sp" android:textColor="#FF5722" android:textStyle="bold"
                    tools:ignore="HardcodedText"/>
            <TextView
                    android:text="@string/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="1"
                    android:textColor="#000000"/>
            <TextView
                    android:text="11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/monthTextView" android:layout_weight="1"
                    android:textSize="20sp" android:textColor="#FF5722" android:textStyle="bold"
                    tools:ignore="HardcodedText"/>
            <TextView
                    android:text="@string/month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="1"
                    android:textColor="#000000"/>
            <TextView
                    android:text="30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/dayTextView" android:layout_weight="1"
                    android:textSize="20sp" android:textColor="#FF5722" android:textStyle="bold"
                    tools:ignore="HardcodedText"/>
            <TextView
                    android:text="@string/day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="1"
                    android:textColor="#000000"/>

        </LinearLayout>


        <TextView
                android:text="@string/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="18sp"
                android:textColor="#000000" android:layout_gravity="center" android:layout_marginEnd="4dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phoneTextView"
                android:textSize="20sp"/>
    </GridLayout>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="20dp" tools:ignore="ContentDescription"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/birth_item"
            android:layout_marginStart="10dp"/>
</LinearLayout>