<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/shape_round_corner"
              android:orientation="vertical">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingHorizontal="16dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_gravity="start|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/confirm_to_edit_anim"
                    android:id="@+id/saveButton"
                    android:layout_weight="1" android:backgroundTint="#FFFFFF"
                    android:layout_gravity="center"
                    tools:ignore="ContentDescription"/>
            <TextView
                    android:text="@string/recipient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="UseSwitchCompatOrMaterialXml"
                    android:layout_gravity="center"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameTextView"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>
        </LinearLayout>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_delete"
                android:layout_weight="1"
                android:id="@+id/deleteButton"
                tools:ignore="ContentDescription"
                android:layout_gravity="end|center"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <LinearLayout
            android:layout_marginStart="45dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:gravity="center"/>
        <EditText
                android:id="@+id/phoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNum"
                android:maxLines="1"
                android:ems="11"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:inputType="phone"/>
    </LinearLayout>
    <EditText
            android:id="@+id/contentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sms_info"
            android:minLines="2"
            android:maxLines="5"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:background="@drawable/shape_round_corner_bottom"
            android:autofillHints=""/>
</LinearLayout>