<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginVertical="2dp">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30sp">

            <TextView
                    android:text="慕容弟弟"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameTextView"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textColor="#03A9F4"
                    tools:ignore="HardcodedText"/>
            <TextView
                    android:text="@string/of"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000000"/>
            <TextView
                    android:text="18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ageTextView"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#FF0000"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText"/>
            <TextView
                    android:text="@string/birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000000"/>
            <TextView
                    android:text="还有"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    tools:ignore="HardcodedText" android:id="@+id/alsoTextView"/>
            <TextView
                    android:text="100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yearTextView"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textColor="#FF5722"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText"/>
            <TextView
                    android:text="@string/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000000"/>
            <TextView
                    android:text="11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/monthTextView"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textColor="#FF5722"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText"/>
            <TextView
                    android:text="@string/month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000000"/>
            <TextView
                    android:text="30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dayTextView"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textColor="#FF5722"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText"/>
            <TextView
                    android:text="@string/day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000000"/>
        </LinearLayout>
        <TextView
                android:text="备忘录"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/textView13"
                android:layout_weight="1"
                tools:ignore="HardcodedText"/>
    </LinearLayout>
    <ImageView
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_vertical|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_media_play"
            android:id="@+id/imageView"
            tools:ignore="ContentDescription"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>