<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="慕容弟弟"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/nameTextView" android:layout_weight="1"
                android:textSize="16sp" android:textColor="#03A9F4"
                android:layout_marginEnd="20dp" tools:ignore="HardcodedText"/>
        <TextView
                android:text="公历"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/lunarTextView" android:layout_weight="1"
                android:textSize="16sp" android:textColor="#000000" android:textStyle="bold"
                tools:ignore="HardcodedText"/>
        <TextView
                android:text="100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/yearTextView" android:layout_weight="1"
                android:textSize="20sp" android:textColor="#FF5722" android:textStyle="bold"
                tools:ignore="HardcodedText"/>
        <TextView
                android:text="@string/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:textColor="#000000"/>
        <TextView
                android:text="11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/monthTextView" android:layout_weight="1"
                android:textSize="20sp" android:textColor="#FF5722" android:textStyle="bold"
                tools:ignore="HardcodedText"/>
        <TextView
                android:text="@string/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:textColor="#000000"/>
        <TextView
                android:text="30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/dayTextView" android:layout_weight="1"
                android:textSize="20sp" android:textColor="#FF5722" android:textStyle="bold"
                tools:ignore="HardcodedText"/>
        <TextView
                android:text="@string/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:textColor="#000000"/>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>